<resources>
    <string name="app_name">SoulBabble</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="mulai">Mulai</string>
    <string name="soulbabble">SoulBabble</string>
    <string name="masuk_dengan">Masuk Dengan :</string>
    <string name="login_with_google">Login with Google</string>
    <string name="skip">Skip</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dengan_masuk_ke_halaman_ini_kamu_menyetujui_syarat_ketentuan_dan_kebijakan_privasi">Dengan masuk ke halaman ini, kamu menyetujui Syarat Ketentuan dan Kebijakan Privasi</string>
    <string name="journal_terbaru">Journal Terbaru</string>
    <string name="rekomendasi_untuk_kamu">Rekomendasi untuk Kamu</string>
    <string name="notification_icon">Notification Icon</string>
    <string name="bagaimana_perasaanmu_hari_ini">Bagaimana perasaanmu hari ini?</string>
    <string name="apa_saja_yang_sedang_kamu_nrasakan_sekarang">Apa yang sedang kamu\nrasakan sekarang?</string>
    <string name="menurut_kamu_emosi_tersebut_n_biasanya_datang_dari_mana">Menurut kamu, emosi tersebut\nbiasanya datang dari mana?</string>
    <string name="terakhir_silahkan_kamu_jawab_beberapa_pertanyaan_dari_kami">Terakhir, silahkan kamu jawab\nbeberapa pertanyaan dari kami?</string>
    <string name="selesai">Selesai</string>
    <string name="perasaan_mingguan">Perasaan Mingguan</string>
    <string name="silahkan_isi">Silahkan Isi</string>
    <string name="kamu_belum_mengisi_emosi_saat_ini">Kamu belum mengisi Emosi saat ini</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="total_emosi_yang_sering_kamu_rasakan">Total Emosi yang sering kamu rasakan</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="my_daily_journal">My Daily Journal</string>
    <string name="hebat_kamu_berhasil_menulis_jurnal_ini">Hebat, kamu berhasil \nmenulis jurnal ini!</string>
    <string name="kegiatan_jurnal_ini_dapat_membantumu_untuk_menjernihkan_pikiran_dan_melupakan_segala_emosi_yang_ada_jangan_berhenti_disini_ya">Kegiatan jurnal ini dapat membantumu untuk\nmenjernihkan pikiran dan melupakan segala emosi \nyang ada. Jangan berhenti disini ya!</string>
    <string name="review_journal">Review Journal</string>
    <string name="coba_ceritakan_apa_saja_kegiatanmu_hari_ini">Coba ceritakan apa saja kegiatanmu hari ini</string>
    <string name="adakah_hal_baru_yang_kamu_sadari_dari_kegiatanmu_hari_ini">Adakah hal baru yang kamu sadari dari kegiatanmu hari ini?</string>
    <string name="todo">TODO</string>
    <string name="informasi_umum">Informasi Umum</string>
    <string name="pusat_bantuan">Pusat Bantuan</string>
    <string name="syarat_dan_ketentuan">Syarat dan Ketentuan</string>
    <string name="kebijakan_privasi">Kebijakan Privasi</string>
    <string name="keluar_akun">Keluar Akun</string>
    <string name="default_web_client_id">658400014376-rgn8hqeqinvceb0oskgr963ll8ojdmug.apps.googleusercontent.com</string>

</resources>