<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/buttonDetail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="195dp"
            android:layout_height="188dp"
            android:src="@drawable/success_journaling" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/hebat_kamu_berhasil_menulis_jurnal_ini"
            android:textAlignment="center"
            android:textColor="@color/text_primary"
            android:textSize="24sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/kegiatan_jurnal_ini_dapat_membantumu_untuk_menjernihkan_pikiran_dan_melupakan_segala_emosi_yang_ada_jangan_berhenti_disini_ya"
            android:textAlignment="center"
            android:textColor="@color/text_secondary"
            android:textSize="12sp"
            tools:ignore="HardcodedText" />
    </LinearLayout>
    <Button
        android:id="@+id/buttonDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/primary"
        android:text="@string/review_journal"
        android:textColor="@color/text_on_primary"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
