<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Toolbar -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.MaterialComponents.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary"
            app:titleTextColor="@color/background_light" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/btnDetailProfile"
                    android:visibility="visible"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    app:cardBackgroundColor="@color/primary"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <com.google.android.material.imageview.ShapeableImageView
                                android:id="@+id/imgProfile"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_marginEnd="12dp"
                                android:contentDescription="@string/soulbabble"
                                android:src="@drawable/ic_launcher_background"
                                app:shapeAppearanceOverlay="@style/RoundedImageViewShape"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"/>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:orientation="vertical"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toEndOf="@id/imgProfile"
                                app:layout_constraintTop_toTopOf="parent">
                                <TextView
                                    android:id="@+id/tvFullname"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/roboto_bold"
                                    android:textColor="@color/text_on_primary"
                                    android:textSize="18sp"
                                    android:textStyle="bold"
                                    tools:text="Nama" />
                                <TextView
                                    android:id="@+id/tvEmail"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/roboto_light"
                                    android:textColor="@color/text_on_primary"
                                    android:textSize="12sp"
                                    tools:text="Email" />
                            </LinearLayout>
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:textColor="@color/text_secondary"
                    android:textSize="12sp"
                    android:text="@string/informasi_umum" />

                <LinearLayout
                    android:id="@+id/btnpusatBantuan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:gravity="clip_horizontal"
                    android:layout_gravity="clip_horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto"
                        android:textColor="@color/text_primary"
                        android:textSize="14sp"
                        android:text="@string/pusat_bantuan" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/icon_right" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/btnKebijakanPrivasi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="clip_horizontal"
                    android:gravity="clip_horizontal"
                    android:orientation="horizontal"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto"
                        android:textColor="@color/text_primary"
                        android:textSize="14sp"
                        android:text="@string/kebijakan_privasi" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/icon_right" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnSyaratKetentuan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:gravity="clip_horizontal"
                    android:layout_gravity="clip_horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto"
                        android:textColor="@color/text_primary"
                        android:textSize="14sp"
                        android:text="@string/syarat_dan_ketentuan" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/icon_right" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:textColor="@color/text_secondary"
                    android:textSize="12sp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="Lainnya" />

                <LinearLayout
                    android:id="@+id/btnExitAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:gravity="clip_horizontal"
                    android:layout_gravity="clip_horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/keluar_akun"
                        android:textColor="@color/red_accent"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/icon_right" />
                </LinearLayout>
            </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
